
- X11 interface has been added as a compile target.

- Added new default TrueType font for sfrotz.

- Automatically select the appropriate interpreter number for V6 games.


BUG FIXES

- Corrected potential trouble with garbage in filenames for SDL
  interface.

- Corrected a problem wherein @print_table would sometimes print garbage.

- Fixed a segfault problem when input buffers are abused.


Summary of changes between Frotz 2.51 and Frotz 2.52:
=====================================================

Frotz 2.52 was released on Sunday May 10, 2020.

This is a minor release focusing on minor enhancements and bug fixes.

NEW FEATURES

- Partial support for new @set_true_colour opcode.  Works for SDL.
  Doesn't work all the way for curses.  Not in scope for dumb interface.


BUG FIXES

- Reworked Makefiles to better handle library detection, particularly
  for macOS.

- Fixed rendering of non-paletted PNG images.  Affected only non-Infocom
  V6 games.

- Rolled back idiosyncrasy fix for Cutthroats and changed over to the
  quick-and-dirty 24-to-12 conversion used by Infocom as this is how the
  Imps expected an interpreter to behave.

- Fixed broken handling of game paths set in environmental variables and
  in config files.

- Fixed slightly broken parsing of .sfrotzrc.

- Fixed behavior of command line processing inconsistent between the
  different user interfaces.

- Assorted source code formatting fixes.


Summary of changes between Frotz 2.50 and Frotz 2.51:
=====================================================

Frotz 2.51 was released on Wednesday February 12, 2020.

This is a minor release focusing on minor enhancements and bug fixes.

NEW FEATURES

- Added an -f option for Dumb Frotz to mark up the output with color and
  formatting codes.  Currently "irc", "ansi", and "normal" modes are
  supported.


BUG FIXES

- Cleanly account for some installations of ncurses which have the
  library split into ncurses (high level) and tinfo (low level).
